# FastStockTicAPI

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pre-commit.yml
src/: alembic.ini  main.py
src/api/v1/: auth.py  routers.py
src/db/: __init__.py  db.py
src/migrations/: env.py
src/migrations/versions/: 4fdba2230b64_added_user_model.py
src/models/: __init__.py  base_model.py  users.py
src/repositories/: base_repository.py  users.py
src/schemas/: users.py
src/services/: managers.py  validators.py
src/settings/: auth.py  config.py
src/utils/: factories.py  unit_of_work.py
