[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Tigran Saatchyan <mr.saatchyan@yandex.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.34.0"
fastapi = "^0.115.6"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
pydantic-settings = "^2.7.0"
asyncpg = "^0.30.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.0"}
datetime = "^5.5"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
pytest = "^8.3.4"
ruff = "^0.8.4"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = [
    ".", "app"
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
select = ["D", "E", "PIE", "T20", "PYI", "Q", "RET", "SIM", "PTH"]
respect-gitignore = false
show-fixes = true
target-version = "py312"
exclude = [".venv", "migrations"]
preview = true
line-length = 79

[tool.ruff.lint.pycodestyle]
max-line-length = 79
max-doc-length = 72

[tool.ruff.lint]
select = [
    "D", # pydocstyle (D)
    "E", # pycodestyle (E, W)
    "PIE", # flake8-pie (PIE)
    "T20", # flake8-print (T20)
    "PYI", # flake8-pyi (PYI)
    "Q", # flake8-quotes (Q)
    "RET", # flake8-return (RET)
    "SIM", # flake8-simplify (SIM)
    "PTH", # flake8-use-pathlib (PTH)
    "TD", # flake8-todos (TD)
    "FIX", # flake8-fixmes (FIX)
    "FURB", # refurb (FURB)
    "RUF", # Ruff-specific rules (RUF)
    "C90", # mccabe (C90) (complex-structure)
    "I", # isort (I)
]
ignore = [
    "D417", # Missing argument descriptions in the docstring
    "D415", # First line should end with a period
    "D205", # 1 blank line required between summary line and description
    "D104", # Missing docstring
    "D101", # Missing docstring
    "D102", # Missing docstring
    "D106", # Missing docstring
    "D107", # Missing docstring
    "TD003", # Missing issue link on the line following this TODOs
    "FIX002", # todos found
    "FIX003", # XXX found
    "FIX004", # HACK found
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.black]
line-length = 79
target-version = ["py312"]
include = "\\.pyi?$"
exclude = "/(\\.venv|build|dist|migrations)/"
